- Bugfix #15: AppImage and Flatpak builds rejected AppStream metadata if conf.AppChangeFileEmpty.
- Bugfix #14: AppImage failed if conf.IconPaths empty. On Linux a default icon will be used (previously worked but was broken due to change).
- Bugfix #13: Incorrect </description> tag in AppStream example text (may be uncommented by used)
- Ships with: appimagetool 13 (2020-12-31)
- Tested against: rpmbuild RPM version 4.18.1, dpkg 1.21.21, flatpak-builder 1.2.3, InnoSetup 6.2.2

+ VERSION 1.4.0; 2023-05-05

- Added 'AppDescription' property to configuration (IMPORTANT NEW FEATURE - see website for information)
- Added ${APPSTREAM_DESCRIPTION_XML} macro to support release information in AppStream metadata
- Updated AppStream metadata template to include ${APPSTREAM_CHANGELOG_XML}
- Now uses 'AppDescription' content when building both RPM and DEB packages

- Added 'AppChangeFile' property to configuration (IMPORTANT NEW FEATURE - see website for information)
- Added ${APPSTREAM_CHANGELOG_XML} macro to support release information in AppStream metadata
- Updated AppStream metadata template to include ${APPSTREAM_DESCRIPTION_XML}
- The AppChangeFile file is now packaged verbatim to the bin directory of deployments
- Added 'InfoBeforeFile' to Windows Setup in order to show AppChangeFile file content
- Added CHANGELOG section to console output when building a package (contains parsed changes only)

- Added MACRO section (verbose only) to console output when building a package (useful for debugging)
- Extensive updates to README documentation
- Other minor corrections and changes
- Ships with: appimagetool 13 (2020-12-31)
- Tested against: rpmbuild RPM version 4.18.1, dpkg 1.21.21, flatpak-builder 1.2.3, InnoSetup 6.2.2


+ VERSION 1.3.1; 2023-05-01
- Bugfix: Fix package creation when file path of contents contain spaces (enclose file path with quotes when executing chmod)


+ VERSION 1.3.0; 2023-04-18
- Added RpmAutoProv and RpmAutoReq properties to configuration