@@ -38,7 +38,17 @@ DesktopFile =
 StartCommand = pupnet
 PrimeCategory = Development
 MetaFile = Deploy/PupNet.metainfo.xml
-IconFiles =
+IconFiles = """
+    Deploy/PupNet.ico
+    Deploy/PupNet.16x16.png
+    Deploy/PupNet.24x24.png
+    Deploy/PupNet.32x32.png
+    Deploy/PupNet.48x48.png
+    Deploy/PupNet.64x64.png
+    Deploy/PupNet.96x96.png
+    Deploy/PupNet.128x128.png
+    Deploy/PupNet.256x256.png
+"""
 
 # DOTNET PUBLISH
 DotnetProjectPath =
