@@ -3,6 +3,7 @@
 - Bugfix #15: AppImage and Flatpak builds rejected AppStream metadata if conf.AppChangeFileEmpty.
 - Bugfix #14: AppImage failed if conf.IconPaths empty. On Linux a default icon will be used (previously worked but was broken due to change).
 - Bugfix #13: Incorrect </description> tag in AppStream example text (may be uncommented by used)
+- Updated to show CHANGELOG on console only with --verbose command option
 - Ships with: appimagetool 13 (2020-12-31)
 - Tested against: rpmbuild RPM version 4.18.1, dpkg 1.21.21, flatpak-builder 1.2.3, InnoSetup 6.2.2
 
